Correct header height calculations
These were messed up for two distinct reasons:

- The new icon is 50px high, and the font-size + padding of the h1 came
  to less than 50px.
- We were calculating the padding on the social icons on the basis that
  they were 24px high. The new glyphicon things are actually 28px high.

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -40,14 +40,14 @@
 // Import the rest of Bootstrap
 @import "bootstrap.less";
 
-@header-padding: 15px;
+@header-padding: 17px;
 @header-font-size: 16px;
 @header-nav-font-size: 16px;
 @header-height: @header-font-size + @header-padding * 2;
 // The (secondary) nav
 @header-nav-padding: (@header-height - @header-nav-font-size) / 2;
-// The social buttons are 24px high
-@header-soc-padding: (@header-height - 24px) / 2;
+// The social buttons are 28px high
+@header-soc-padding: (@header-height - 28px) / 2;
 
 header {
   margin: 20px 0;
@@ -79,6 +79,7 @@ header {
 
 #nav-secondary {
   font-size: @header-nav-font-size;
+  line-height: 1em;
   margin-top: @header-nav-padding;
   margin-bottom: @header-nav-padding;
   margin-right: 15px;
